[workspace]
members = ["infinite-rs", "infinite-rs-derive"]
resolver = "3"

[workspace.package]
authors = ["Surasia", "TheHaloArchive"]
documentation = "https://docs.rs/infinite-rs"
repository = "https://github.com/TheHaloArchive/infinite-rs"
categories = ["encoding", "games", "TheHaloArchive"]
keywords = ["halo", "halo-infinite", "game-hacking", "reverse-engineering"]
readme = "README.md"
license = "Unlicense OR MIT"
edition = "2024"
rust-version = "1.85"

[profile.release]
lto = "fat"
incremental = true
