[package]
name = "infinite-rs-derive"
description = "Derive macros for `infinite-rs`"
version = "0.1.9"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[dev-dependencies]
infinite-rs = { path = "../infinite-rs" }
